--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+body{
+	background-color: #f8f8f8;
+}
+.book-library{
+	background-color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+h1{
+	background-color: :#ebf2ed;
+	text-align: center;
+}
+.book{
+	background-color:#ebf2ed;
+}
+.book h2{
+	color: #777777;	
+}
+img{
+	margin-left: 30%;
+	margin-top: 10px;
+}
+button{
+	background-color: #2ecc71;
+	width: 100%;
+}
+
+
