--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ img{
 	margin-left: 30%;
 	margin-top: 10px;
 }
-button{
+.button{
 	background-color: rgb(46, 204, 113);
 	color: white;
 	width: 100%;
